--- a/info.html
+++ b/info.html
@@ -1,18 +1,16 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>"Scholl 30 fc"</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="style_inf.css">
     <link rel="stylesheet" href="media-style.css">
     <link rel="stylesheet" href="style-шапка-сайта.css">
     <link rel="stylesheet" href="style_login.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style_footter.css">
-    <link rel="stylesheet" href="Лучшие.css">
 </head>
 <body>
     <div class="header">
@@ -25,39 +23,24 @@
           <a href=# onclick="str2()">Новости</a>
           <img src="img/1.jpg" alt="" class="im" onclick="blockD()"   >
         </div>
-    </div>    
-    <div class="h1">
-        <h1>School 30 FC</h1>
-        <div class="div-in">
-            <h2 id="h2">Лучшие игроки по мини футболу</h2>
-        </div>
-        <div class="igr-mini">
-            <div class="igr-content">
-                <h2>За неделю</h2>
-                <div class="block-gr"><h4>Лучший нападающий: </h4><h3>Русак Артем</h3></div>
-                <div class="block-gr"><h4>Лучший полузащитник:</h4> <h3>Лукашеня Михаил</h3></div>
-                <div class="block-gr"><h4>Лучший защитник:</h4> <h3>Федор Томашев</h3></div>
-                <div class="block-gr"><h4>Лучший вратарь:</h4> <h3>Усик</h3></div>
-            </div>
-            <div class="igr-content">
-                <h2>За месяц</h2>
-                <div class="block-gr"><h4>Лучший нападающий: </h4><h3>Русак Артем</h3></div>
-                <div class="block-gr"><h4>Лучший полузащитник:</h4> <h3>Лукашеня Михаил</h3></div>
-                <div class="block-gr"><h4>Лучший защитник:</h4> <h3>Федор Томашев</h3></div>
-                <div class="block-gr"><h4>Лучший вратарь:</h4> <h3>Усик</h3></div>
-            </div>
-            <div class="igr-content">
-                <h2>За все время</h2>
-                <div class="block-gr"><h4>Лучший нападающий: </h4><h3>Русак Артем</h3></div>
-                <div class="block-gr"><h4>Лучший полузащитник:</h4> <h3>Лукашеня Михаил</h3></div>
-                <div class="block-gr"><h4>Лучший защитник:</h4> <h3>Федор Томашев</h3></div>
-                <div class="block-gr"><h4>Лучший вратарь:</h4> <h3>Усик</h3></div>
-            </div>
-        </div>
-        <div class="block-help"></div>
+      </div>
 
-    <div id="overlay">
+      <div class="block-phone">
+          <p>Номер телефона:</p>
+          <p><a href="tel:+375291814687"><i class='bx bxs-phone'></i></a></p>
+      </div>
 
+      <div class="block-tg">
+          <p>Telegram</p>
+          <p><a href="https://t.me/+375291814687"><i class='bx bxs-phone'></i></a></p>
+      </div>
+      <div class="block-viber">
+          <p>Viber</p>
+          <p><a href="https://invite.viber.com/?g=4BixUfCz0lPSmprto-cgh005Ejsg7Du7"><img src="img/viber.png" alt=""></a></p>
+      </div>
+
+      <div id="overlay">
+        
         <div class="popup">
             <div class="wrapper">
                 <div class="cross">
@@ -146,8 +129,5 @@
         </footer>
     </div>
     
-
 </body>
 </html>
-
-
